Fix #32 Make ValidateRepo work on everyobody's machines This commit changes the class used to run the processes. Does not fix the bug, but changes which tests that do not pass.